--- a/index.html
+++ b/index.html
@@ -3,22 +3,60 @@
 	<head>
 		<title>ccr</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-		<style>
-		
-		</style>
+		<link rel="stylesheet" href="C:\xampp\htdocs\portfolio\ccr123.github.io\style.css">
 
 	</head>
 	<body>
-		<header>
-		</header>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			  <div class="container">
+				<a class="navbar-brand" href="#"><img src="C:\xampp\htdocs\portfolio\ccr123.github.io\images\shishir_logo.png" alt="logo" srcset="logo" height="50" width="50"></a>
+				<button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="collapsibleNavId">
+					<ul class="navbar-nav me-auto mt-2 mt-lg-0">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home <span class="visually-hidden">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">My Works</a>
+						</li>
+						<li class="nav-item">
+							<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modelId">
+							  Say Hi
+							</button>
+						</li>
+					</ul>
+				</div>
+				<!-- Button trigger modal -->
+				
+				<!-- Modal -->
+				<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">Modal title</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								Body
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary">Send</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+		  </div>
 		</nav>
+		<img src="C:\xampp\htdocs\portfolio\ccr123.github.io\images\shishir_logo.png" alt="logo" srcset="logo" height="50" width="50">
+
 
 		<footer>
     		<ul>
@@ -27,4 +65,5 @@
 		</footer>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<script src="C:\xampp\htdocs\portfolio\ccr123.github.io\main.js"></script>
 </html>
