--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="C:\xampp\htdocs\portfolio\ccr123.github.io\style.css">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -19,12 +21,15 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#"></a>
+          <a class="nav-link day-night-toggler" href="#">
+			<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png" class="moon" height="30" width="30" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png">
+			<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png" class="sun" height="30" width="30" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png">
+		  </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-flex align-items-center">
           <a class="nav-link text-black" href="#">My Works</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-flex align-items-center">
 			<button type="button" class="btn text-black" data-bs-toggle="modal" data-bs-target="#modelId">
 				Say Hi
 			</button>
@@ -51,6 +56,12 @@
   </div>
 </nav>
 
+<section class="d-flex justify-content-center hero-banner">
+	<a class="hero-toggler" href="#">
+		<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png" class="hero moon" height="150" width="150" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png">
+		<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png" class="hero sun" height="150" width="150" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png">
+	</a>
+</section>
 </body>
 <script src="C:\xampp\htdocs\portfolio\ccr123.github.io\main.js"></script>
 </html>
