--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png" class="hero moon" height="150" width="150" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/moon-new.png">
 		<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png" class="hero sun" height="150" width="150" alt="" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/sun-new.png">
 	</a>
+	<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/stars.png" alt="stars" height="30" width="30" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/stars.png">
 </section>
 </body>
 <script src="C:\xampp\htdocs\portfolio\ccr123.github.io\main.js"></script>
