--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<img src="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/stars.png" alt="stars" height="30" width="30" srcset="https://raw.githubusercontent.com/ccr123/ccr123.github.io/main/images/stars.png">
 </section>
 </body>
-<script src="C:\xampp\htdocs\portfolio\ccr123.github.io\main.js"></script>
+<script src="main.js"></script>
 </html>
 
 
